# DCCEXSimpleThrottle

./: .buildinfo  .gitignore  ActionMenuItem.cpp  ActionMenuItem.h  ActionMenuItem_8cpp.html  ActionMenuItem_8cpp__incl.map  ActionMenuItem_8cpp__incl.md5  ActionMenuItem_8h.html  ActionMenuItem_8h__dep__incl.map  ActionMenuItem_8h__dep__incl.md5  ActionMenuItem_8h__incl.map  ActionMenuItem_8h__incl.md5  ActionMenuItem_8h_source.html  AppConfiguration.cpp  AppConfiguration.h  AppConfiguration_8cpp.html  AppConfiguration_8cpp__incl.map  AppConfiguration_8cpp__incl.md5  AppConfiguration_8h.html  AppConfiguration_8h__dep__incl.map  AppConfiguration_8h__dep__incl.md5  AppConfiguration_8h__incl.map  AppConfiguration_8h__incl.md5  AppConfiguration_8h_source.html  AppOrchestrator.cpp  AppOrchestrator.h  AppOrchestrator_8cpp.html  AppOrchestrator_8cpp__incl.map  AppOrchestrator_8cpp__incl.md5  AppOrchestrator_8h.html  AppOrchestrator_8h__dep__incl.map  AppOrchestrator_8h__dep__incl.md5  AppOrchestrator_8h__incl.map  AppOrchestrator_8h__incl.md5  AppOrchestrator_8h_source.html  BaseMenu.cpp  BaseMenu.h  BaseMenuItem.cpp  BaseMenuItem.h  BaseMenuItem_8cpp.html  (+1008 more)
.github/workflows/: docs.yml
NEW/: AppConfiguration.h.new  BaseMenuItem.h.new  ButtonInterface.h.new  Controller.cpp.new  DCCEXSimpleThrottle.ino.new  DisplayInterface.h.new  LocoMenuItem.h.new  MenuScreen.h.new  OperatingScreen.cpp.new  OperatingScreen.h.new  RotaryEncoderInterface.h.new  ScreenManager.h.new  U8G2SH1106Display.h.new
OLD/: DCCEXCallbacks.cpp.old  DCCEXFunctions.h  DeviceFunctions.cpp.old  DeviceFunctions.h.old  DisplayFunctions.h  Menu.cpp
cmake/: FindArduinoCore-Test.cmake  sanitize.cmake
docs/: CapturedCMakeStuff.txt  Doxyfile.in  conf.py  index.rst
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  (+78 more)
test/mocks/: Arduino.h  DCCEXProtocol.h  U8g2lib.h
test/native/test_unit/: BaseMenuTests.cpp.disable  FirstTest.cpp
test/test_BaseMenu/include/: MockBaseMenu.h
test/test_BaseMenu/src/: BaseMenuTests.cpp
tests/: BaseMenuTests.cpp  CMakeLists.txt  DCCEXSimpleThrottleTest.cpp  DCCEXSimpleThrottleTest.h  MockDisplayInterface.h  MockEventManager.h  MockTests.cpp  MockUserConfirmationInterface.h  MockUserSelectionInterface.h
tests/mocks/: MockSerial.cpp  MockSerial.h
